<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Alta_Campana_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="37dp">


        <Button
            android:id="@+id/btnCerrarSession"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/Out_AltaCampana"
            android:textAlignment="textStart"
            android:textColor="#348708"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toEndOf="@+id/btnCerrarSession"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="113dp" />

        <Button
            android:id="@+id/btnCerrarSession"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/Cerar_AltaCampana"
            android:textAlignment="center"
            android:textColor="#348708"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="41dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/title_Altacampana"
            android:textAlignment="center"
            android:textColor="#0C0C0B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="200dp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/NombreCampana"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:ems="10"
            android:hint="@string/Fecha"
            android:inputType="date"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textLocalidad"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/Localidad"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Provincia"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp">

            <EditText
                android:id="@+id/textCantS"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:hint="@string/CantSolitantes"
                android:inputType="number"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spCantdias"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:contentDescription="@string/CantDias"
                android:dropDownWidth="match_parent" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:text="@string/Check"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.Material3.Button"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#348708"
            android:text="@string/BotonGuardar"
            android:textSize="14sp"
            app:rippleColor="#4CAF50" />
    </LinearLayout>

</LinearLayout>