<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AltaCampaniaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleACampania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/title_Altacampana"
            android:textAlignment="center"
            android:textColor="#0C0C0B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="200dp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NombreCampana"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/textFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:ems="10"
            android:hint="@string/Fecha"
            android:inputType="date"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/textDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Direccion"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spLocalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/arrayLocalidades" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Spinner
            android:id="@+id/spProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/arrayProvincia" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/textCantS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CantSolitantes"
            android:inputType="number"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/textCantDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/CantDias"
            android:inputType="number"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Check"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.Material3.Button"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#348708"
            android:text="@string/BotonGuardar"
            android:textSize="14sp"
            app:rippleColor="#4CAF50" />
    </LinearLayout>


</LinearLayout>