<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Detalle_Campana_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <Button
            android:id="@+id/BtnBack"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/Back_DetalleCampana"
            android:textAlignment="center"
            android:textColor="#348708"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="41dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleDetalleC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/title_Detallecampana"
            android:textAlignment="center"
            android:textColor="#0C0C0B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="200dp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="221dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/id"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textIdResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textEmpresa"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Empresa"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textEmpresaResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFecha"
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/FechaDCampaña" />

            <TextView
                android:id="@+id/textFechaResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLocalidad"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LocalidadDetalle" />

            <TextView
                android:id="@+id/textLocalidadResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textProvincia"
                android:layout_width="19dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ProvinciaDetalle" />

            <TextView
                android:id="@+id/textProvinciaResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCantS"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CantSolitantesDetalle" />

            <TextView
                android:id="@+id/textCantSResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCantD"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CantDiasDetalle" />

            <TextView
                android:id="@+id/textCantDResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVolver"
            style="@style/Widget.Material3.Button"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#348708"
            android:text="@string/BotonVolver"
            android:textSize="14sp"
            app:rippleColor="#4CAF50" />

    </LinearLayout>

</LinearLayout>