<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetalleCampaniaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/title_Detallecampana"
                    android:textAlignment="center"
                    android:textColor="#0C0C0B"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="32dp"
                    tools:layout_conversion_absoluteWidth="200dp"
                    tools:layout_editor_absoluteX="41dp"
                    tools:layout_editor_absoluteY="0dp"
                    android:padding="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/id"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtIdResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/NombreCampana"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtNombreResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/FechaDCampaña"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtFechaResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtFechaFin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/FechaFinDCampaña"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtFechaFinResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtLocalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LocalidadDetalle"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtLocalidadResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ProvinciaDetalle"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtProvinciaResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/DireccionDetalle"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtDireccionResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtCantDonantes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/CantDonantesDetalle"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtCantDonantesResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtAlertaHistorialMedicoDetalleCampania"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Debe completar el historial medico"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtCantDias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/CantDias"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtCantDiasResponse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnPostularseDetalleCampania"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="#348708"
                    android:text="Postularse"
                    android:textSize="14sp"
                    app:rippleColor="#4CAF50" />

                <Button
                    android:id="@+id/btnBorrarDetalleCampania"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="#348708"
                    android:text="Eliminar"
                    android:textSize="14sp"
                    app:rippleColor="#4CAF50" />

                <Button
                    android:id="@+id/btnVolverDetalleCampania"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:backgroundTint="#348708"
                    android:text="@string/BotonVolver"
                    android:textSize="14sp"
                    app:rippleColor="#4CAF50" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>